--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -15,26 +15,26 @@
 <div id="logoutLoader" class="loader-bar"></div>
   
 <div class="container">
-  <h1 class="dash-title">Dashboard</h1>
+  <h2 class="dash-title">Dashboard</h2>
 
     <!-- MAIN SALE -->
     <div class="dash-card">
-  <div class="dash-title">Main Sale</div>
+  <div class="dash-title">Main Store</div>
   <button onclick="openSection('main')">View</button>
   </div>
     <!-- SPECIAL SALE -->
   <div class="dash-card">
-  <div class="dash-title">Special Sale</div>
+  <div class="dash-title">Special Store</div>
   <button onclick="openSection('special')">View</button>
 </div>
 
   <!-- ===== MAIN SALE SECTION ===== -->
   <div id="section-main" class="section-panel">
-   <h3>Main Page</h3>
+   <h3>Main Store</h3>
     <div class="section-top">
-      <h4>Main Page Add Product</h4>
+      <h4>Add Store Product</h4>
       <button onclick="toggleAdd('main')">
-        + Add Products
+        + Add
       </button>
     </div>
 
@@ -61,9 +61,9 @@
 
   <!-- ===== SPECIAL SALE SECTION ===== -->
   <div id="section-special" class="section-panel">
-    <h3>Special Sale Page</h3>
+    <h3>Special Store</h3>
     <div class="sale-control">
-  <h4>Live Sale Time Control</h4>
+  <h4>Sale Time Control</h4>
 
   <div class="toggle-row">
     <span>Enable Sale Manually</span>
@@ -89,9 +89,9 @@
   <div class="center-msg" id="sale-save-msg"></div>
     </div>
     <div class="section-top">
-      <h4>Special Sale Page Add Products </h4>
+      <h4>Add Store Product</h4>
       <button onclick="toggleAdd('special')">
-        + Add Product
+        + Add
       </button>
     </div>
 
