--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -31,6 +31,7 @@
   <!-- ===== MAIN SALE SECTION ===== -->
   <div id="section-main" class="section-panel">
    <h3>Main Store</h3>
+    <div class="border-top"></div>
     <div class="section-top">
       <h4>Add Store Product</h4>
       <button onclick="toggleAdd('main')">
@@ -62,6 +63,7 @@
   <!-- ===== SPECIAL SALE SECTION ===== -->
   <div id="section-special" class="section-panel">
     <h3>Special Store</h3>
+    <div class="border-top"></div>
     <div class="sale-control">
   <h4>Sale Time Control</h4>
 
@@ -88,6 +90,7 @@
   </button>
   <div class="center-msg" id="sale-save-msg"></div>
     </div>
+    <div class="border-top"></div>
     <div class="section-top">
       <h4>Add Store Product</h4>
       <button onclick="toggleAdd('special')">
