--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -68,7 +68,16 @@
   onkeyup="searchProducts()"
   class="search-bar">
 
-  <div id="sale-main"></div>
+  <div id="sale-main">
+<div id="productsLoader">
+  <div class="border-top"></div>
+  <div class="loader-grid">
+    <div></div><div></div><div></div>
+    <div></div><div></div><div></div>
+    <div></div><div></div><div></div>
+  </div>
+</div>
+  </div>
 
   <a class="wa-float"
 href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast.scape."
