--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -84,7 +84,10 @@
   </label>
 
   <br><br>
-
+<button id="saleSaveBtn" onclick="saveSaleConfig()">
+    Save Sale Settings
+    <span id="saleSaveLoader" class="loader"></span>
+</button>
   <button onclick="saveSaleConfig()">
     Save Sale Settings
   </button>
