--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -84,13 +84,8 @@
   </label>
 
   <br><br>
-<button id="saleSaveBtn" onclick="saveSaleConfig()">
-    Save Sale Settings
-    <span id="saleSaveLoader" class="loader"></span>
-</button>
-  <button onclick="saveSaleConfig()">
-    Save Sale Settings
-  </button>
+  <button onclick="saveSaleConfig()" class="primary-btn" id="saleSaveBtn">Save Sale Settings</button>
+<div id="saveLoader" class="loader"></div>
   <div class="center-msg" id="sale-save-msg"></div>
     </div>
     <div class="border-top"></div>
