--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -85,7 +85,7 @@
 
   <br><br>
   <button onclick="saveSaleConfig()" class="primary-btn" id="saleSaveBtn">Save Sale Settings</button>
-<div id="saveLoader" class="loader"></div>
+<div id="saleSaveLoader" class="loader"></div>
   <div class="center-msg" id="sale-save-msg"></div>
     </div>
     <div class="border-top"></div>
