--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -34,10 +34,13 @@
     <div class="border-top"></div>
     <div class="section-top">
       <h4>Add Store Product</h4>
-      <button onclick="toggleAdd('main')">
-        + Add
-      </button>
+      <button onclick="toggleAdd('main')">+ Add</button>
     </div>
+    <div class="section-top">
+  <h4>View Store Product</h4>
+    <button onclick="toggleList('main')">View</button>
+  </div>
+  
 
     <div id="add-main" class="add-wrap">
       <div id="mainAddForm">
@@ -91,11 +94,12 @@
     <div class="border-top"></div>
     <div class="section-top">
       <h4>Add Store Product</h4>
-      <button onclick="toggleAdd('special')">
-        + Add
-      </button>
+      <button onclick="toggleAdd('special')">+ Add</button>
     </div>
-
+<div class="section-top">
+  <h4>View Store Product</h4>
+    <button onclick="toggleList('special')">View</button>
+</div>
     <div id="add-special" class="add-wrap">
       <div id="specialAddForm">
         
