--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -123,6 +123,8 @@ Save Product
     </div>
     </div>
     <div id="specialProducts"></div>
+    <div id="deleteLoader" class="loader"></div>
+<p class="center-msg" id="deleteMsg"></p>
   </div>
 </div>
 
